test_case/rust-lang_rust/56600_445302507_43.rs
compile_fail,E0433\nlet map = HashMap::new();\n// error: failed to resolve: use of undeclared type or module `HashMap`\n